--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -25,8 +25,17 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   line-height: 1;
+  height: 100%;
+}
+
+#app {
+  height: 100%;
 }
 
 ol, ul {
