--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -25,6 +25,11 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 html {
   height: 100%;
 }
