--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -19,3 +19,11 @@ $color-primary-hover: #5b5a5a;
   display: flex;
   justify-content: center;
 }
+
+@mixin content {
+  border: 1px solid #e4e3e3;
+  box-sizing: border-box;
+  border-radius: 4px;
+  width: 100%;
+  background: white;
+}
