--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -54,6 +54,7 @@ $color-primary-hover: #5b5a5a;
   border-radius: 4px;
   width: 100%;
   background: white;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
 }
 
 @mixin header-img {
